Edit index.html and page-two.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!--index is used as the main page-->
 <html lang="en">
 <head>
         <meta charset="UTF-8">
@@ -16,5 +16,6 @@
     <p>Commodo viverra <strong>maecenas</strong> accumsan lacus vel facilisis volutpat est velit. Diam volutpat commodo sed egestas. Arcu non odio euismod lacinia at quis risus. Non diam phasellus vestibulum lorem. Arcu vitae elementum curabitur vitae. Sed odio morbi quis commodo odio aenean. Et odio <strong>pellentesque</strong> diam volutpat commodo. <a href="http://www.apple.com"><strong>Vitae</strong></a> sapien pellentesque habitant morbi tristique senectus et. Morbi tristique senectus et netus et malesuada fames ac.</p>
 
     <h4><a href="page-two.html">Next Page</a></h4>
+
 </body>
 </html>
