--- a/page-two.html
+++ b/page-two.html
@@ -10,5 +10,45 @@
     <h2><em>Conclusion</em></h2>
 
     <p><em>Egestas fringilla phasellus faucibus scelerisque eleifend donec.</em> Sapien eget mi proin sed libero. Montes nascetur ridiculus mus mauris vitae ultricies. Tristique sollicitudin nibh sit amet commodo nulla. Velit egestas dui id ornare arcu odio ut. Ultrices neque ornare aenean euismod elementum nisi quis. Tempus urna et pharetra pharetra massa. <strong>Elementum</strong> curabitur vitae nunc sed. Vitae elementum curabitur vitae nunc. Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. A cras semper auctor neque. Tempus quam pellentesque nec nam. Nunc consequat interdum varius sit amet mattis vulputate. Mollis aliquam ut porttitor leo. Et netus et malesuada fames ac. A <strong>suscipi</strong> sit amet porttitor. Dui vivamus arcu felis bibendum. Amet nisl suscipit adipiscing bibendum est ultricies integer. Tincidunt tortor aliquam nulla facilisi. Elit ut aliquam purus sit amet luctus venenatis lectus magna.</p>
+
+    <h2><em>Lists</em></h2>
+
+    <h3>Unordered list</h3>
+
+    <h4>Shopping list</h4>
+    <ul>
+        <li>BBQ Chicken</li>
+        <li>Babyleaf Salad</li>
+        <li>Diet Coke</li>
+        <li>Cadbury Hot Chocolate</li>
+    </ul>
+
+    <h4>Travel wishlist</h4>
+    <ul>
+        <li>Paris</li>
+        <li>Iceland</li>
+        <li>Santorini</li>
+        <li>New York</li>
+    </ul>
+
+    <h3>Ordered list</h3>
+
+    <h4>To-do list</h4>
+    <ol>
+        <li>ML assignments</li>
+        <li>Complete HTML & CSS tutorial</li>
+        <li>Plan for placement applications</li>
+        <li>Cook for dinner</li>
+    </ol>
+
+    <h4>Top 5 movies/series</h4>
+    <ol>
+        <li>The Prestige</li>
+        <li>Drive to Survive</li>
+        <li>The Office</li>
+        <li>How I Met Your Mother</li>
+        <li>Hunter X Hunter</li>
+    </ol>
+
 </body>
 </html>
